# pongV2

./: CMakeLists.txt  README.md  REAMDME.md
include/: ball.hpp  bat.hpp
src/: ball.cpp  bat.cpp  main.cpp
